# Kalatori

./: .dockerignore  .gitignore  .mcp.json  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  front-end.mk  mkdocs.yml  polygon-rpc-interactions.md  rust-toolchain.toml  tools.mk
.cargo/: config.toml
.claude/commands/: address-pr-comments.md  doc-sync.md
.github/workflows/: _job-cargo-deny.yml  _job-cargo-test-coverage.yml  _job-cargo-test.yml  _job-clippy.yml  _job-fmt.yml  (+18 more)
.serena/: .gitignore.orig  project.yml  project.yml.orig
chopsticks/: Dockerfile
ci/: dagger.json
client/: Cargo.toml
client/examples/: crud.rs  generate_hmac_test_vectors.rs  webhook.rs
client/src/: client.rs  lib.rs  utils.rs
client/src/types/: api.rs  common.rs  invoice.rs  transaction.rs
configs/: auth.json.example  chopsticks-kampela.toml  database.json.example  etherscan_client.json.example  fee.json.example  liberland.toml  shop.json.example
daemon/: Cargo.toml
daemon/configs/: etherscan_client.json  shop.json
daemon/examples/: pay_invoice.rs
daemon/src/: api.rs  auth.rs  balance_checker.rs  chain.rs  chain_client.rs  clients.rs  configs.rs  dao.rs  error.rs  etherscan_client.rs  expiration_detector.rs  fee_client.rs  main.rs  state.rs  swaps.rs  types.rs  utils.rs  webhook_sender.rs
daemon/src/api/: admin.rs  auth_endpoints.rs  dev.rs  internal.rs  private.rs  public.rs  utils.rs  validator.rs
daemon/src/auth/: errors.rs  oauth_client.rs  session.rs  state_encryption.rs  token.rs
daemon/src/chain/: executor.rs  invoice_registry.rs  transactions_recorder.rs  transfer_tracker.rs
daemon/src/chain_client/: asset_hub.rs  errors.rs  keyring.rs  polygon.rs  rotator.rs
daemon/src/chain_client/polygon/: pimlico_client.rs
daemon/src/clients/: across.rs  bungee.rs  github.rs  swaps.rs  zeroex.rs
daemon/src/clients/across/: types.rs
daemon/src/clients/bungee/: types.rs
daemon/src/clients/swaps/: across.rs  bungee.rs  zeroex.rs
daemon/src/clients/swaps/across/: types.rs
daemon/src/clients/swaps/bungee/: types.rs
daemon/src/clients/swaps/zeroex/: types.rs
daemon/src/clients/zeroex/: types.rs
daemon/src/configs/: consts.rs  types.rs  utils.rs
daemon/src/dao/: changes.rs  interface.rs  invoice.rs  payout.rs  refund.rs  swap.rs  transaction.rs
daemon/src/dao/snapshots/: kalatori__dao__invoice__tests__date_range_after_boundary.snap  kalatori__dao__invoice__tests__date_range_before_boundary.snap  kalatori__dao__invoice__tests__paginated_all_terminal_statuses.snap  kalatori__dao__invoice__tests__paginated_combined_asset_and_chain.snap  kalatori__dao__invoice__tests__paginated_combined_chain_and_status.snap  kalatori__dao__invoice__tests__paginated_empty_status_filter.snap  kalatori__dao__invoice__tests__paginated_filter_by_asset_id.snap  kalatori__dao__invoice__tests__paginated_filter_by_chain.snap  kalatori__dao__invoice__tests__paginated_filter_by_order_id.snap  kalatori__dao__invoice__tests__paginated_filter_multiple_statuses.snap  kalatori__dao__invoice__tests__paginated_filter_single_status.snap  kalatori__dao__invoice__tests__paginated_limit_offset.snap  kalatori__dao__invoice__tests__paginated_no_filters.snap  kalatori__dao__payout__tests__paginated_payouts_combined_filters.snap  kalatori__dao__payout__tests__paginated_payouts_failed_statuses.snap  kalatori__dao__payout__tests__paginated_payouts_filter_by_asset_id.snap  kalatori__dao__payout__tests__paginated_payouts_filter_by_chain.snap  kalatori__dao__payout__tests__paginated_payouts_filter_by_invoice_id.snap  kalatori__dao__payout__tests__paginated_payouts_filter_multiple_statuses.snap  kalatori__dao__payout__tests__paginated_payouts_filter_single_status.snap  kalatori__dao__payout__tests__paginated_payouts_no_filters.snap  kalatori__dao__payout__tests__paginated_payouts_sort_asc.snap  kalatori__dao__swap__tests__paginated_swaps_no_filters.snap  kalatori__dao__transaction__tests__paginated_transactions_combined_filters.snap  kalatori__dao__transaction__tests__paginated_transactions_date_range.snap  kalatori__dao__transaction__tests__paginated_transactions_empty_result.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_by_asset_id.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_by_chain.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_by_invoice_id.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_by_type.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_multiple_statuses.snap  kalatori__dao__transaction__tests__paginated_transactions_filter_single_status.snap  kalatori__dao__transaction__tests__paginated_transactions_no_filters.snap  kalatori__dao__transaction__tests__paginated_transactions_sort_asc.snap  kalatori__dao__transaction__tests__pagination_page1.snap  kalatori__dao__transaction__tests__pagination_page2.snap  kalatori__dao__transaction__tests__pagination_page3.snap
daemon/src/etherscan_client/: types.rs
daemon/src/state/: dev_api.rs  swaps.rs
daemon/src/swaps/: executor.rs  tracker.rs
daemon/src/types/: admin.rs  changes.rs  common.rs  fee_payout.rs  invoice.rs  payout.rs  refund.rs  swap.rs  transaction.rs  webhook_event.rs
daemon/src/utils/: logger.rs  logging.rs  refund_destination_detector.rs  shutdown.rs  url_validation.rs
dev/: docker-compose.yml
docs/: DATABASE.md  architecture.md  configuration.md  conventions.md  dagger-migration-plan.md  doc-update-triggers.md  error-handling.md  fee-legal.md  fee.md  index.md  mcp-tooling.md  testing-strategy.md
migrations/: 20250218000001_add_transaction_uniqueness_constraints.sql  20260303181227_add_swaps.sql  20260401000001_refund_destination_fields.sql  20260420000001_payout_fee.sql  20260423000001_add_paid_at_to_invoices.sql  20260515090507_transaction_origin_indexes.sql  20260610120000_add_invoice_metadata.sql
src/: definitions.rs  error.rs  server.rs  state.rs  utils.rs
tests/: docker-compose.yml
tools/cargo-bin/: Cargo.toml
tools/cargo-bin/src/: main.rs
(+18 files in other folders)
